# nlp_twitter_analysis

./: .gitignore  LICENSE  ReadMe.md  pyproject.toml
data/augment/: augmented_2023-06-02-10-27-57.csv
data/clean/: cleaned_2023-06-02-10-27-57.csv  punc_2023-06-02-10-27-57.csv
data/languagemodel/: art_and_design.csv  automotive.csv  beauty_and_cosmetics.csv  books_and_literature.csv  business_and_finance.csv  education_and_learning.csv  entertainment_and_pop_culture.csv  environment_and_sustainability.csv  family_and_parenting.csv  fashion_and_style.csv  food_and_cooking.csv  funny_and_humorous.csv  gaming.csv  health_and_wellness.csv  home_and_garden.csv  inspirational_and_motivational.csv  other.csv  pets_and_animals.csv  politics_and_current_affairs.csv  religion_and_spirituality.csv  science_and_discovery.csv  social_issues_and_activism.csv  sports_and_athletics.csv  technology_and_innovation.csv  travel_and_adventure.csv  weather_and_seasons.csv
data/raw/: labeled_2023-06-02-07-09-45.csv  labeled_2023-06-02-10-27-57.csv  unlabeled.db
data/sentencebroken/: sentencebroken_2023-06-02-10-27-57.csv
data/split/: test.csv  train.csv  validation.csv
data/wordbroken/: wordbroken_2023-06-02-10-27-57.csv
models/gpt2/base_persian/: tokenizer.json
models/gpt2/education_and_learning/: config.json
models/gpt2/environment_and_sustainability/: config.json  merges.txt
models/gpt2/home_and_garden/: config.json  generation_config.json  (+2 more)
models/spm_tokenizer/: tokenizer100.model  tokenizer1000.model
models/word2vec/: education_and_learning.npy  environment_and_sustainability.npy  home_and_garden.npy  politics_and_current_affairs.npy  weather_and_seasons.npy
src/: .env.sample  main.py
src/latex/: report.tex  report_final.tex
src/twitter_crawler/: main.py
src/utils/: basic.py  break.py  clean.py  cleaning.py  constants.py  crawling.py  gpt2.py  label.py  labeling.py  parsbert.py  segment.py  sentencepiece.py  split.py  stats.py  word2vec.py
stats/: augmented_counts.csv  openai_test_results.csv  parsbert_test_results.csv  stats_2023-06-02-10-27-57.csv  tokenizer_stats.csv
(+9 files in other folders)
