[tool.poetry]
name = "nlp-twitter-analysis"
version = "0.1.0"
description = ""
authors = ["Hamed Feizabadi <hamedfz19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.14.0"
Scrapy = "^2.9.0"
selenium = "^4.9.1"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
nltk = "^3.8.1"
hazm = "^0.9.0"
clean-text = "^0.6.0"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
