[tool.poetry]
name = "nlp-twitter-analysis"
version = "0.1.0"
description = ""
authors = ["Hamed Feizabadi <hamedfz19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.9.0"
selenium = "^4.9.1"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
nltk = "^3.8.1"
hazm = "^0.9.0"
clean-text = "^0.6.0"
unidecode = "^1.3.6"
matplotlib = "^3.7.1"
gensim = "^4.3.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
transformers = "^4.30.2"
huggingface-hub = {extras = ["cli"], version = "^0.16.4"}
pandas = "^2.0.3"
tqdm = "^4.65.0"
accelerate = "^0.20.3"
wget = "^3.2"
seaborn = "^0.12.2"
arabic-reshaper = "^3.0.0"
python-bidi = "^0.4.2"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
